--- a/plugin/HTML/EN/plugins/CPlus/settings/basic.html
+++ b/plugin/HTML/EN/plugins/CPlus/settings/basic.html
@@ -7,14 +7,29 @@
 	<div class="prefDesc">
 	[% WRAPPER setting title="PLUGIN_CPLUS_SOCKS" desc="PLUGIN_CPLUS_SOCKS_DESC" %]
 
-		[% "PLUGIN_CPLUS_USESOCKS" | string %]
-		<input name="pref_socks" type="checkbox" [% IF prefs.pref_socks %] checked [% END %]>
+		<table>
+		<tr>
+		<td>[% "PLUGIN_CPLUS_USESOCKS" | string %]&nbsp</td>
+		<td><input name="pref_socks" type="checkbox" [% IF prefs.pref_socks %] checked [% END %]></td></tr>
 		
-		&nbsp[% "PLUGIN_CPLUS_SOCKSSERVER" | string %]
-		<input type="text" class="stdedit" name="pref_socks_server" id="pref_socks_server" value="[% prefs.pref_socks_server %]" size="10">
+		<tr>
+		<td>[% "PLUGIN_CPLUS_SOCKSSERVER" | string %]</td>
+		<td>
+		<input type="text" class="stdedit" name="pref_socks_server" id="pref_socks_server" value="[% prefs.pref_socks_server %]" size="20">
 		
-		[% "PLUGIN_CPLUS_SOCKSPORT" | string %]
-		<input type="text" class="stdedit" name="pref_socks_port" id="pref_socks_port" value="[% prefs.pref_socks_port %]" size="4">
+		&nbsp[% "PLUGIN_CPLUS_SOCKSPORT" | string %]
+		<input type="text" class="stdedit" name="pref_socks_port" id="pref_socks_port" value="[% prefs.pref_socks_port %]" size="2">
+		</td></tr>
+		
+		<tr>
+		<td>[% "PLUGIN_CPLUS_SOCKSUSER" | string %]</td>
+		<td>
+		<input type="text" class="stdedit" name="pref_socks_user" id="pref_socks_user" value="[% prefs.pref_socks_user %]" size="20">
+		
+		&nbsp[% "PLUGIN_CPLUS_SOCKSPASSWORD" | string %]
+		<input type="password" class="stdedit" name="pref_socks_password" id="pref_socks_password" value="[% prefs.pref_socks_password %]" size="10">
+		</td></tr>
+		</table>
 
 	[% END %]
 	
